--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:paddingTop="2dp"
             android:paddingRight="4dp"
             android:paddingBottom="2dp"
-            app:rounded_background_color="@color/rounded_background_color"/>
+            app:ctv_rounded_background_color="@color/rounded_background_color"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -104,9 +104,9 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:textSize="12sp"
-            app:rounded_background_color="@color/rounded_background_color"
-            app:show_guidelines="false"
-            app:overflow_prefix="+"
+            app:ctv_rounded_background_color="@color/rounded_background_color"
+            app:ctv_show_guidelines="false"
+            app:ctv_overflow_prefix="+"
             />
     </RelativeLayout>
 </LinearLayout>
