--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="centeredTextViewStyle">@style/CenteredTextViewStyle</item>
+        <item name="ctv_centeredTextViewStyle">@style/CenteredTextViewStyle</item>
     </style>
 
     <style name="CenteredTextViewStyle" parent="@android:style/Widget.TextView">
